# Krni_lib

./: LICENSE  README.md  setup.cfg
.github/workflows/: python-publish.yml
src/krni_lib/: __init__.py  core.py
