[metadata]
name = krni_lib
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = Une librairie utilitaire Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/krni_lib
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    urllib3

[options.packages.find]
where = src
